opt: sync code